test locale and use Accept-Language
